--- a/package.json
+++ b/package.json
@@ -8,19 +8,11 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "tsc",
-    "test": "jest",
-    "test:cov": "jest --coverage",
-    "posttest:cov": "ts-node commands/open-coverage.command.ts"
+    "build": "tsc"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-typescript": "^7.26.0",
-    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
